bottom spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ a:hover {
     padding: 25px 15px;
     box-shadow: 0 0 10px black;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .sidebar__avatar {
@@ -110,7 +111,7 @@ a:hover {
 
 @media(max-width:991px) {
     .app__main-content {
-        margin: 30px 0;
+        margin: 50px 0 110px 0;
     }
 }
 
@@ -145,9 +146,17 @@ a:hover {
 
 @media (max-width: 600px)
 {
+    .app__container {
+        padding-top: 30px;
+    }
     .app__main-content{
         margin-right: 10px;
         margin-left: 10px;
+        bottom:30px;
+    }
+    .sidebar__container{
+        padding-left: 10px;
+        padding-right: 10px;
     }
     .navbar__active {
         font-size: 1.5rem;
